--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
             text-align: center;
         }
 
-        /* 로딩 화면 */
         .loading {
             display: flex;
             flex-direction: column;
@@ -56,7 +55,6 @@
             font-size: 14px;
         }
 
-        /* 에러 화면 */
         .error {
             display: none;
             min-height: 60vh;
@@ -75,7 +73,6 @@
             font-size: 14px;
         }
 
-        /* 보증서 메인 */
         .certificate {
             display: none;
         }
@@ -231,19 +228,16 @@
 <body>
     <div class="container">
 
-        <!-- 로딩 화면 -->
         <div class="loading" id="loading">
             <div class="spinner"></div>
             <p>보증서를 불러오고 있습니다...</p>
         </div>
 
-        <!-- 에러 화면 -->
         <div class="error" id="error">
             <h2>보증서를 찾을 수 없습니다</h2>
             <p>링크를 다시 확인해주세요</p>
         </div>
 
-        <!-- 보증서 메인 -->
         <div class="certificate" id="certificate">
             <div class="top-ornament">
                 <div class="line"></div>
@@ -252,16 +246,16 @@
             </div>
 
             <div class="brand">나를읽다</div>
-            <div class="cert-title">운 명 공 명 보 증 서</div>
+            <div class="cert-title" id="certTitle">운 명 공 명 보 증 서</div>
 
             <div class="client-name" id="clientName"></div>
-            <div class="honorific">님의 운명 분석이 완성되었습니다</div>
+            <div class="honorific" id="honorific">님의 운명 분석이 완성되었습니다</div>
 
             <div class="product-tag" id="productTag"></div>
 
             <div class="divider"></div>
 
-            <div class="message">
+            <div class="message" id="message">
                 귀하의 사주 오행과 MBTI 심리 유형을<br>
                 분석하여 조율된 맞춤형 솔루션입니다
             </div>
@@ -269,22 +263,26 @@
             <div class="buttons">
                 <a href="#" class="btn" id="btnPdf" target="_blank">
                     <span class="icon">📜</span>
-                    <span>사주 분석 리포트 보기</span>
+                    <span id="btnPdfText">사주 분석 리포트 보기</span>
                 </a>
                 <a href="#" class="btn" id="btnVoice" target="_blank">
                     <span class="icon">🎧</span>
-                    <span>심층 음성 해설 듣기</span>
+                    <span id="btnVoiceText">심층 음성 해설 듣기</span>
                 </a>
                 <div class="btn-row" id="btnRow">
                     <a href="#" class="btn" id="btnGaeun" target="_blank">
                         <span class="icon">🎵</span>
-                        <span>개운송</span>
+                        <span id="btnGaeunText">개운송</span>
                     </a>
                     <a href="#" class="btn" id="btnHealing" target="_blank">
                         <span class="icon">🎶</span>
-                        <span>힐링음악</span>
+                        <span id="btnHealingText">힐링음악</span>
                     </a>
                 </div>
+                <a href="#" class="btn" id="btnThema" target="_blank">
+                    <span class="icon">🎼</span>
+                    <span id="btnThemaText">테마송</span>
+                </a>
             </div>
 
             <div class="footer">
@@ -299,7 +297,6 @@
     <script>
         const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSLwX3_NEYRLeNv8UmKxsL9vrTHmHwMcSWtu7uGuIUyV79m8Qhw6jLJtxOPjIEzxNt1Ks7nqYaKnlb2/pub?gid=0&single=true&output=csv';
 
-        // URL에서 코드 가져오기
         const urlParams = new URLSearchParams(window.location.search);
         const code = urlParams.get('c');
 
@@ -315,7 +312,6 @@
                 const csvText = await response.text();
                 const rows = csvText.split('\n').map(row => parseCSVRow(row));
                 
-                // 헤더 찾기
                 const header = rows[0];
                 const codeIndex = header.findIndex(h => h.trim() === '코드');
                 
@@ -324,7 +320,6 @@
                     return;
                 }
 
-                // 코드로 고객 찾기
                 const customerRow = rows.find((row, i) => i > 0 && row[codeIndex] && row[codeIndex].trim() === code);
 
                 if (!customerRow) {
@@ -332,7 +327,6 @@
                     return;
                 }
 
-                // 데이터 매핑
                 const getData = (colName) => {
                     const idx = header.findIndex(h => h.trim() === colName);
                     return idx !== -1 ? (customerRow[idx] || '').trim() : '';
@@ -346,9 +340,37 @@
                 const themaLink = getData('테마송링크');
                 const healingLink = getData('힐링음악링크');
 
-                // 화면에 표시
+                // 이름 표시
                 document.getElementById('clientName').textContent = name;
                 document.getElementById('productTag').textContent = product;
+
+                // 상품 유형 판별 (우리를 = 궁합 / 나를 = 공명)
+                const isCouple = product.includes('우리');
+
+                // 보증서 타이틀 변경
+                if (isCouple) {
+                    document.getElementById('certTitle').textContent = '운 명 궁 합 보 증 서';
+                    document.getElementById('honorific').textContent = '님의 궁합 분석이 완성되었습니다';
+                    document.getElementById('message').innerHTML = '두 분의 사주 오행과 MBTI 심리 유형을<br>분석하여 조율된 맞춤형 솔루션입니다';
+                } else {
+                    document.getElementById('certTitle').textContent = '운 명 공 명 보 증 서';
+                    document.getElementById('honorific').textContent = '님의 운명 분석이 완성되었습니다';
+                    document.getElementById('message').innerHTML = '귀하의 사주 오행과 MBTI 심리 유형을<br>분석하여 조율된 맞춤형 솔루션입니다';
+                }
+
+                // 버튼 텍스트 변경
+                if (isCouple) {
+                    document.getElementById('btnPdfText').textContent = '궁합 분석 리포트 보기';
+                    document.getElementById('btnVoiceText').textContent = '심층 궁합 해설 듣기';
+                    document.getElementById('btnGaeunText').textContent = '둘만의 개운송';
+                    document.getElementById('btnHealingText').textContent = '맞춤 힐링송';
+                    document.getElementById('btnThemaText').textContent = '맞춤 테마송';
+                } else {
+                    document.getElementById('btnPdfText').textContent = '사주 분석 리포트 보기';
+                    document.getElementById('btnVoiceText').textContent = '심층 음성 해설 듣기';
+                    document.getElementById('btnGaeunText').textContent = '나만의 개운송';
+                    document.getElementById('btnHealingText').textContent = '맞춤 힐링음악';
+                }
 
                 // 버튼 활성화 (링크가 있는 것만)
                 if (pdfLink) {
@@ -371,12 +393,7 @@
                     btn.classList.add('active');
                     hasGaeun = true;
                 }
-                if (themaLink) {
-                    const btn = document.getElementById('btnGaeun');
-                    btn.href = themaLink;
-                    btn.classList.add('active');
-                    hasGaeun = true;
-                }
+
                 if (healingLink) {
                     const btn = document.getElementById('btnHealing');
                     btn.href = healingLink;
@@ -386,6 +403,12 @@
 
                 if (hasGaeun || hasHealing) {
                     document.getElementById('btnRow').classList.add('active');
+                }
+
+                if (themaLink) {
+                    const btn = document.getElementById('btnThema');
+                    btn.href = themaLink;
+                    btn.classList.add('active');
                 }
 
                 // 로딩 숨기고 보증서 표시
@@ -402,7 +425,6 @@
             document.getElementById('error').style.display = 'flex';
         }
 
-        // CSV 파싱 (쉼표가 포함된 값 처리)
         function parseCSVRow(row) {
             const result = [];
             let current = '';
