--- a/index.html
+++ b/index.html
@@ -45,8 +45,6 @@
         .footer { margin-top: 40px; padding-top: 24px; }
         .footer-brand { font-family: 'Noto Serif KR', serif; font-size: 12px; color: #5a5040; letter-spacing: 2px; }
         .footer-sub { font-size: 11px; color: #3a3530; margin-top: 4px; }
-
-        /* ── 내장 플레이어 ── */
         .player-wrap { display: none; border: 1px solid #c9a84c33; border-top: none; border-radius: 0 0 8px 8px; background: linear-gradient(135deg, #12121f, #0e0e1a); padding: 20px 16px; margin-top: -1px; }
         .player-wrap.open { display: block; }
         .player-visual { display: flex; align-items: center; gap: 14px; margin-bottom: 16px; }
@@ -67,8 +65,6 @@
         .player-bottom { display: flex; justify-content: center; margin-top: 12px; }
         .player-download { display: inline-flex; align-items: center; gap: 6px; padding: 6px 16px; border: 1px solid #c9a84c33; border-radius: 20px; background: transparent; color: #8a7a5a; font-size: 11px; text-decoration: none; transition: all 0.2s; letter-spacing: 1px; }
         .player-download:hover { color: #c9a84c; border-color: #c9a84c66; }
-
-        /* 버튼 열려있을 때 모서리 조정 */
         .btn.expanded { border-radius: 8px 8px 0 0; border-bottom-color: transparent; }
     </style>
 </head>
@@ -88,11 +84,9 @@
             <div class="divider"></div>
             <div class="message" id="message">귀하의 사주 오행과 MBTI 심리 유형을<br>분석하여 조율된 맞춤형 솔루션입니다</div>
             <div class="buttons" id="buttons">
-                <!-- PDF: 기존 다운로드 방식 -->
                 <div class="btn-item" id="pdfItem">
                     <a href="#" class="btn" id="btnPdf" target="_blank"><span class="icon">📜</span><span id="btnPdfText">사주 분석 리포트</span></a>
                 </div>
-                <!-- 테마곡: 내장 플레이어 -->
                 <div class="btn-item" id="themeItem">
                     <div class="btn" id="btnTheme" onclick="togglePlayer('theme')"><span class="icon">🎵</span><span id="btnThemeText">맞춤형 음원</span></div>
                     <div class="player-wrap" id="playerTheme">
@@ -115,7 +109,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- 음성: 내장 플레이어 -->
                 <div class="btn-item" id="voiceItem">
                     <div class="btn" id="btnVoice" onclick="togglePlayer('voice')"><span class="icon">🎧</span><span id="btnVoiceText">음성 해설</span></div>
                     <div class="player-wrap" id="playerVoice">
@@ -138,7 +131,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- 힐링: 내장 플레이어 -->
                 <div class="btn-item" id="healingItem">
                     <div class="btn" id="btnHealing" onclick="togglePlayer('healing')"><span class="icon">🎶</span><span id="btnHealingText">힐링음악</span></div>
                     <div class="player-wrap" id="playerHealing">
@@ -171,7 +163,6 @@
         const code = urlParams.get('c');
         if (!code) { showError(); } else { loadCertificate(code); }
 
-        /* ── Drive URL 변환 ── */
         function toDirectLink(url) {
             if (!url) return url;
             var docsMatch = url.match(/docs\.google\.com\/document\/d\/([a-zA-Z0-9_-]+)/);
@@ -183,7 +174,7 @@
             return url;
         }
 
-        /* ★ 수정된 함수: export=download&confirm=t 로 스캔 확인 페이지 우회 */
+        /* ★ 스트리밍용: export=view 로 인라인 재생 */
         function toStreamLink(url) {
             if (!url) return url;
             var id = null;
@@ -193,11 +184,10 @@
                 m = url.match(/drive\.google\.com\/open\?id=([a-zA-Z0-9_-]+)/);
                 if (m) id = m[1];
             }
-            if (id) return 'https://drive.google.com/uc?export=download&confirm=t&id=' + id;
+            if (id) return 'https://drive.google.com/uc?export=view&id=' + id;
             return url;
         }
 
-        /* ── 오디오 관리 ── */
         var audioPlayers = {};
         var playerIntervals = {};
 
@@ -212,8 +202,6 @@
             var wrap = document.getElementById('player' + type.charAt(0).toUpperCase() + type.slice(1));
             var btn = document.getElementById('btn' + type.charAt(0).toUpperCase() + type.slice(1));
             var isOpen = wrap.classList.contains('open');
-
-            // 다른 플레이어 모두 닫기
             ['theme', 'voice', 'healing'].forEach(function(t) {
                 var w = document.getElementById('player' + t.charAt(0).toUpperCase() + t.slice(1));
                 var b = document.getElementById('btn' + t.charAt(0).toUpperCase() + t.slice(1));
@@ -225,7 +213,6 @@
                     if (pb) pb.textContent = '▶';
                 }
             });
-
             if (isOpen) {
                 wrap.classList.remove('open');
                 btn.classList.remove('expanded', 'playing');
@@ -235,7 +222,6 @@
             } else {
                 wrap.classList.add('open');
                 btn.classList.add('expanded');
-                // 자동 재생
                 playPause(type);
             }
         }
@@ -245,9 +231,7 @@
             if (!audio) return;
             var playBtn = document.getElementById(type + 'PlayBtn');
             var btn = document.getElementById('btn' + type.charAt(0).toUpperCase() + type.slice(1));
-
             if (audio.paused) {
-                // 다른 오디오 정지
                 ['theme', 'voice', 'healing'].forEach(function(t) {
                     if (t !== type && audioPlayers[t]) {
                         audioPlayers[t].pause();
@@ -311,30 +295,23 @@
             audioPlayers[type] = audio;
         }
 
-        /* ── 보증서 로딩 ── */
         async function loadCertificate(code) {
             try {
                 const response = await fetch(CSV_URL);
                 const csvText = await response.text();
                 const rows = csvText.split('\n').map(row => parseCSVRow(row));
                 const header = rows[0];
-
                 const codeIndex = header.findIndex(h => h.trim() === '보증코드');
                 if (codeIndex === -1) { showError(); return; }
-
                 const customerRow = rows.find((row, i) => i > 0 && row[codeIndex] && row[codeIndex].trim() === code);
                 if (!customerRow) { showError(); return; }
-
                 const getData = (colName) => {
                     const idx = header.findIndex(h => h.trim() === colName);
                     return idx !== -1 ? (customerRow[idx] || '').trim() : '';
                 };
-
                 const name = getData('주인공1');
                 const name2 = getData('주인공2');
                 const product = getData('상품');
-
-                // URL + 파일명
                 const pdfLink     = getData('PDF');
                 const pdfName     = getData('PDF명');
                 const themeLink   = getData('테마곡');
@@ -343,36 +320,25 @@
                 const voiceName   = getData('음성명');
                 const healingLink = getData('힐링');
                 const healingName = getData('힐링명');
-
-                // 이름 표시
                 document.getElementById('clientName').textContent = name;
                 document.getElementById('productTag').textContent = product;
-
-                // 궁합 분기
                 const isCouple = product.includes('우리');
                 if (isCouple && name2) {
                     document.getElementById('nameDivider').style.display = 'flex';
                     document.getElementById('clientName2').style.display = 'block';
                     document.getElementById('clientName2').textContent = name2;
                 }
-
                 if (isCouple) {
                     document.getElementById('certTitle').textContent = '운 명 궁 합 보 증 서';
                     document.getElementById('honorific').textContent = '님의 궁합 분석이 완성되었습니다';
                     document.getElementById('message').innerHTML = '두 분의 사주 오행과 MBTI 심리 유형을<br>분석하여 조율된 맞춤형 솔루션입니다';
                 }
-
-                // 상품별 플레이어 문구
                 var subtitleText = isCouple ? '두 분을 위한' : '당신만을 위한';
-
-                // PDF 버튼 (다운로드)
                 if (pdfLink) {
                     document.getElementById('btnPdf').href = toDirectLink(pdfLink);
                     document.getElementById('btnPdf').classList.add('active');
                     if (pdfName) document.getElementById('btnPdfText').textContent = pdfName;
                 }
-
-                // 테마곡 (플레이어)
                 if (themeLink) {
                     document.getElementById('btnTheme').classList.add('active');
                     if (themeName) document.getElementById('btnThemeText').textContent = themeName;
@@ -381,8 +347,6 @@
                     document.getElementById('themeDownload').href = toDirectLink(themeLink);
                     setupAudio('theme', themeLink);
                 }
-
-                // 음성 (플레이어)
                 if (voiceLink) {
                     document.getElementById('btnVoice').classList.add('active');
                     if (voiceName) document.getElementById('btnVoiceText').textContent = voiceName;
@@ -391,8 +355,6 @@
                     document.getElementById('voiceDownload').href = toDirectLink(voiceLink);
                     setupAudio('voice', voiceLink);
                 }
-
-                // 힐링 (플레이어)
                 if (healingLink) {
                     document.getElementById('btnHealing').classList.add('active');
                     if (healingName) document.getElementById('btnHealingText').textContent = healingName;
@@ -401,7 +363,6 @@
                     document.getElementById('healingDownload').href = toDirectLink(healingLink);
                     setupAudio('healing', healingLink);
                 }
-
                 document.getElementById('loading').style.display = 'none';
                 document.getElementById('certificate').style.display = 'block';
             } catch (e) {
